crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file_clickbench_duckdb_file_on_zero_results_clickbench_q13_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q13"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                        |
+---------------+-----------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: c DESC NULLS FIRST, fetch=10                                                                                          |
|               |   Projection: hits.SearchPhrase, count(*) AS c                                                                              |
|               |     Aggregate: groupBy=[[hits.SearchPhrase]], aggr=[[count(Int64(1)) AS count(*)]]                                          |
|               |       BytesProcessedNode                                                                                                    |
|               |         Filter: CAST(hits.SearchPhrase AS Utf8) != Utf8("")                                                                 |
|               |           TableScan: hits projection=[SearchPhrase], partial_filters=[CAST(hits.SearchPhrase AS Utf8) != Utf8("")]          |
| physical_plan | SortExec: TopK(fetch=10), expr=[c@1 DESC], preserve_partitioning=[false]                                                    |
|               |   CoalescePartitionsExec                                                                                                    |
|               |     ProjectionExec: expr=[SearchPhrase@0 as SearchPhrase, count(*)@1 as c]                                                  |
|               |       AggregateExec: mode=FinalPartitioned, gby=[SearchPhrase@0 as SearchPhrase], aggr=[count(*)]                           |
|               |         CoalesceBatchesExec: target_batch_size=8192                                                                         |
|               |           RepartitionExec: partitioning=Hash([SearchPhrase@0], 24), input_partitions=24                                     |
|               |             AggregateExec: mode=Partial, gby=[SearchPhrase@0 as SearchPhrase], aggr=[count(*)]                              |
|               |               BytesProcessedExec                                                                                            |
|               |                 CoalesceBatchesExec: target_batch_size=8192                                                                 |
|               |                   FilterExec: CAST(SearchPhrase@0 AS Utf8) !=                                                               |
|               |                     SchemaCastScanExec                                                                                      |
|               |                       RepartitionExec: partitioning=RoundRobinBatch(24), input_partitions=1                                 |
|               |                         FallbackOnZeroResultsScanExec                                                                       |
|               |                           CoalescePartitionsExec                                                                            |
|               |                             RepartitionExec: partitioning=RoundRobinBatch(24), input_partitions=1                           |
|               |                               DuckSqlExec sql= SELECT "SearchPhrase" FROM hits WHERE (CAST(SearchPhrase AS VARCHAR) <> '')  |
|               |                                                                                                                             |
+---------------+-----------------------------------------------------------------------------------------------------------------------------+
