crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file_clickbench_duckdb_file_on_zero_results_clickbench_q14_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q14"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                  |
+---------------+-----------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: u DESC NULLS FIRST, fetch=10                                                                                    |
|               |   Projection: hits.SearchPhrase, count(alias1) AS u                                                                   |
|               |     Aggregate: groupBy=[[hits.SearchPhrase]], aggr=[[count(alias1)]]                                                  |
|               |       Aggregate: groupBy=[[hits.SearchPhrase, hits.UserID AS alias1]], aggr=[[]]                                      |
|               |         BytesProcessedNode                                                                                            |
|               |           Filter: hits.SearchPhrase != LargeBinary("")                                                                |
|               |             TableScan: hits projection=[UserID, SearchPhrase], partial_filters=[hits.SearchPhrase != LargeBinary("")] |
| physical_plan | SortExec: TopK(fetch=10), expr=[u@1 DESC], preserve_partitioning=[false]                                              |
|               |   CoalescePartitionsExec                                                                                              |
|               |     ProjectionExec: expr=[SearchPhrase@0 as SearchPhrase, count(alias1)@1 as u]                                       |
|               |       AggregateExec: mode=FinalPartitioned, gby=[SearchPhrase@0 as SearchPhrase], aggr=[count(alias1)]                |
|               |         CoalesceBatchesExec: target_batch_size=8192                                                                   |
|               |           RepartitionExec: partitioning=Hash([SearchPhrase@0], 16), input_partitions=16                               |
|               |             AggregateExec: mode=Partial, gby=[SearchPhrase@0 as SearchPhrase], aggr=[count(alias1)]                   |
|               |               AggregateExec: mode=FinalPartitioned, gby=[SearchPhrase@0 as SearchPhrase, alias1@1 as alias1], aggr=[] |
|               |                 CoalesceBatchesExec: target_batch_size=8192                                                           |
|               |                   RepartitionExec: partitioning=Hash([SearchPhrase@0, alias1@1], 16), input_partitions=16             |
|               |                     AggregateExec: mode=Partial, gby=[SearchPhrase@1 as SearchPhrase, UserID@0 as alias1], aggr=[]    |
|               |                       BytesProcessedExec                                                                              |
|               |                         CoalesceBatchesExec: target_batch_size=8192                                                   |
|               |                           FilterExec: SearchPhrase@1 !=                                                               |
|               |                             SchemaCastScanExec                                                                        |
|               |                               RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                   |
|               |                                 FallbackOnZeroResultsScanExec                                                         |
|               |                                   CoalescePartitionsExec                                                              |
|               |                                     RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1             |
|               |                                       DuckSqlExec sql=                                                                |
|               |                                                                                                                       |
+---------------+-----------------------------------------------------------------------------------------------------------------------+
