crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file_clickbench_duckdb_file_on_zero_results_clickbench_q15_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q15"
---
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                          |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: c DESC NULLS FIRST, fetch=10                                                                                                            |
|               |   Projection: hits.SearchEngineID, hits.SearchPhrase, count(*) AS c                                                                           |
|               |     Aggregate: groupBy=[[hits.SearchEngineID, hits.SearchPhrase]], aggr=[[count(Int64(1)) AS count(*)]]                                       |
|               |       BytesProcessedNode                                                                                                                      |
|               |         Filter: CAST(hits.SearchPhrase AS Utf8) != Utf8("")                                                                                   |
|               |           TableScan: hits projection=[SearchEngineID, SearchPhrase], partial_filters=[CAST(hits.SearchPhrase AS Utf8) != Utf8("")]            |
| physical_plan | SortExec: TopK(fetch=10), expr=[c@2 DESC], preserve_partitioning=[false]                                                                      |
|               |   CoalescePartitionsExec                                                                                                                      |
|               |     ProjectionExec: expr=[SearchEngineID@0 as SearchEngineID, SearchPhrase@1 as SearchPhrase, count(*)@2 as c]                                |
|               |       AggregateExec: mode=FinalPartitioned, gby=[SearchEngineID@0 as SearchEngineID, SearchPhrase@1 as SearchPhrase], aggr=[count(*)]         |
|               |         CoalesceBatchesExec: target_batch_size=8192                                                                                           |
|               |           RepartitionExec: partitioning=Hash([SearchEngineID@0, SearchPhrase@1], 24), input_partitions=24                                     |
|               |             AggregateExec: mode=Partial, gby=[SearchEngineID@0 as SearchEngineID, SearchPhrase@1 as SearchPhrase], aggr=[count(*)]            |
|               |               BytesProcessedExec                                                                                                              |
|               |                 CoalesceBatchesExec: target_batch_size=8192                                                                                   |
|               |                   FilterExec: CAST(SearchPhrase@1 AS Utf8) !=                                                                                 |
|               |                     SchemaCastScanExec                                                                                                        |
|               |                       RepartitionExec: partitioning=RoundRobinBatch(24), input_partitions=1                                                   |
|               |                         FallbackOnZeroResultsScanExec                                                                                         |
|               |                           CoalescePartitionsExec                                                                                              |
|               |                             RepartitionExec: partitioning=RoundRobinBatch(24), input_partitions=1                                             |
|               |                               DuckSqlExec sql= SELECT "SearchEngineID", "SearchPhrase" FROM hits WHERE (CAST(SearchPhrase AS VARCHAR) <> '')  |
|               |                                                                                                                                               |
+---------------+-----------------------------------------------------------------------------------------------------------------------------------------------+
