crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file_clickbench_duckdb_file_on_zero_results_clickbench_q19_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q19"
---
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                                                                                      |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: count(*) DESC NULLS FIRST, fetch=10                                                                                                                                                                                                 |
|               |   Projection: hits.UserID, date_part(Utf8("MINUTE"),to_timestamp(hits.EventTime)) AS m, hits.SearchPhrase, count(*)                                                                                                                       |
|               |     Aggregate: groupBy=[[hits.UserID, date_part(Utf8("MINUTE"), CAST(to_timestamp(hits.EventTime) AS Timestamp(Nanosecond, None))), hits.SearchPhrase]], aggr=[[count(Int64(1)) AS count(*)]]                                             |
|               |       BytesProcessedNode                                                                                                                                                                                                                  |
|               |         TableScan: hits projection=[EventTime, UserID, SearchPhrase]                                                                                                                                                                      |
| physical_plan | SortExec: TopK(fetch=10), expr=[count(*)@3 DESC], preserve_partitioning=[false]                                                                                                                                                           |
|               |   CoalescePartitionsExec                                                                                                                                                                                                                  |
|               |     ProjectionExec: expr=[UserID@0 as UserID, date_part(Utf8("MINUTE"),to_timestamp(hits.EventTime))@1 as m, SearchPhrase@2 as SearchPhrase, count(*)@3 as count(*)]                                                                      |
|               |       AggregateExec: mode=FinalPartitioned, gby=[UserID@0 as UserID, date_part(Utf8("MINUTE"),to_timestamp(hits.EventTime))@1 as date_part(Utf8("MINUTE"),to_timestamp(hits.EventTime)), SearchPhrase@2 as SearchPhrase], aggr=[count(*)] |
|               |         CoalesceBatchesExec: target_batch_size=8192                                                                                                                                                                                       |
|               |           RepartitionExec: partitioning=Hash([UserID@0, date_part(Utf8("MINUTE"),to_timestamp(hits.EventTime))@1, SearchPhrase@2], 24), input_partitions=24                                                                               |
|               |             AggregateExec: mode=Partial, gby=[UserID@1 as UserID, date_part(MINUTE, to_timestamp(EventTime@0)) as date_part(Utf8("MINUTE"),to_timestamp(hits.EventTime)), SearchPhrase@2 as SearchPhrase], aggr=[count(*)]                |
|               |               BytesProcessedExec                                                                                                                                                                                                          |
|               |                 SchemaCastScanExec                                                                                                                                                                                                        |
|               |                   RepartitionExec: partitioning=RoundRobinBatch(24), input_partitions=1                                                                                                                                                   |
|               |                     FallbackOnZeroResultsScanExec                                                                                                                                                                                         |
|               |                       CoalescePartitionsExec                                                                                                                                                                                              |
|               |                         RepartitionExec: partitioning=RoundRobinBatch(24), input_partitions=1                                                                                                                                             |
|               |                           DuckSqlExec sql= SELECT "EventTime", "UserID", "SearchPhrase" FROM hits                                                                                                                                         |
|               |                                                                                                                                                                                                                                           |
+---------------+-------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
