crates/test-framework/src/snapshot/snapshots/explain/test_framework__snapshot__file_clickbench_duckdb_file_on_zero_results_clickbench_q22_explain.snap
---
source: crates/test-framework/src/snapshot/mod.rs
description: "Query: clickbench_q22"
---
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| plan_type     | plan                                                                                                                                                                     |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
| logical_plan  | Sort: c DESC NULLS FIRST, fetch=10                                                                                                                                       |
|               |   Projection: hits.SearchPhrase, min(hits.URL), count(*) AS c                                                                                                            |
|               |     Aggregate: groupBy=[[hits.SearchPhrase]], aggr=[[min(hits.URL), count(Int64(1)) AS count(*)]]                                                                        |
|               |       BytesProcessedNode                                                                                                                                                 |
|               |         Filter: CAST(hits.URL AS LargeUtf8) LIKE LargeUtf8("%google%") AND hits.SearchPhrase != LargeBinary("")                                                          |
|               |           TableScan: hits projection=[URL, SearchPhrase], partial_filters=[CAST(hits.URL AS LargeUtf8) LIKE LargeUtf8("%google%"), hits.SearchPhrase != LargeBinary("")] |
| physical_plan | SortExec: TopK(fetch=10), expr=[c@2 DESC], preserve_partitioning=[false]                                                                                                 |
|               |   CoalescePartitionsExec                                                                                                                                                 |
|               |     ProjectionExec: expr=[SearchPhrase@0 as SearchPhrase, min(hits.URL)@1 as min(hits.URL), count(*)@2 as c]                                                             |
|               |       AggregateExec: mode=FinalPartitioned, gby=[SearchPhrase@0 as SearchPhrase], aggr=[min(hits.URL), count(*)]                                                         |
|               |         CoalesceBatchesExec: target_batch_size=8192                                                                                                                      |
|               |           RepartitionExec: partitioning=Hash([SearchPhrase@0], 16), input_partitions=16                                                                                  |
|               |             AggregateExec: mode=Partial, gby=[SearchPhrase@1 as SearchPhrase], aggr=[min(hits.URL), count(*)]                                                            |
|               |               BytesProcessedExec                                                                                                                                         |
|               |                 CoalesceBatchesExec: target_batch_size=8192                                                                                                              |
|               |                   FilterExec: CAST(URL@0 AS LargeUtf8) LIKE %google% AND SearchPhrase@1 !=                                                                               |
|               |                     SchemaCastScanExec                                                                                                                                   |
|               |                       RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                                              |
|               |                         FallbackOnZeroResultsScanExec                                                                                                                    |
|               |                           CoalescePartitionsExec                                                                                                                         |
|               |                             RepartitionExec: partitioning=RoundRobinBatch(16), input_partitions=1                                                                        |
|               |                               DuckSqlExec sql=                                                                                                                           |
|               |                                                                                                                                                                          |
+---------------+--------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
